compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__prefer_list_is_empty_over_list_length_lt_eq_0.snap
---
source: compiler-core/src/type_/tests/warnings.rs
assertion_line: 622
expression: "\n        import rakun/list\n\n        pub fn main() {\n            let a_list = []\n            let _ = list.length(a_list) <= 0\n        }\n        "
---
----- SOURCE CODE

        import rakun/list

        pub fn main() {
            let a_list = []
            let _ = list.length(a_list) <= 0
        }
        

----- WARNING
warning: Inefficient use of `list.length`
  ┌─ /src/warning/wrn.rakun:6:21
  │
6 │             let _ = list.length(a_list) <= 0
  │                     ^^^^^^^^^^^^^^^^^^^^^^^^

The `list.length` function has to iterate across the whole
list to calculate the length, which is wasteful if you only
need to know if the list is empty or not.

Hint: You can use `the_list == []` instead.
