compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__todo_warning_correct_location.snap
---
source: compiler-core/src/type_/tests/warnings.rs
assertion_line: 25
expression: "pub fn main() {\n        todo\n      }"
---
----- SOURCE CODE
pub fn main() {
        todo
      }

----- WARNING
warning: Todo found
  ┌─ /src/warning/wrn.rakun:2:9
  │
2 │         todo
  │         ^^^^ This code is incomplete

This code will crash if it is run. Be sure to finish it before
running your program.
