compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__todo_with_known_type.snap
---
source: compiler-core/src/type_/tests/warnings.rs
assertion_line: 34
expression: "pub fn main() -> String {\n  todo\n}"
---
----- SOURCE CODE
pub fn main() -> String {
  todo
}

----- WARNING
warning: Todo found
  ┌─ /src/warning/wrn.rakun:2:3
  │
2 │   todo
  │   ^^^^ This code is incomplete

This code will crash if it is run. Be sure to finish it before
running your program.

Hint: I think its type is `String`.
